fix resume link. fix photo link (filenames are case-sensitive on unix-like operating systems, unlike windows).

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h2 id="aboutme">About Me</h2>
 	</div>
 	<div id="exp1">
-			<img id="me" src="2professional.jpg" alt="Picture of Kyle in a suit" width="250" height="300">
+			<img id="me" src="./2Professional.jpg" alt="Picture of Kyle in a suit" width="250" height="300">
 		<p style="text-align: center; margin-left: 100px; margin-right: 100px;"> I am a recent graduate from Iowa State University with a BS degree in Economics and a minor in Data Science.
 			Looking for a job as a Data Analyst, Data engineer, or Software/Web Developer.</p>
 		<br>
