Improved layout and interactivity for mobile devices.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </ul>
       </nav>
       <main>
+		<div id="aboutme">
+		</div>
         <div class="marginalign">
-          <h2 id="aboutme">About Me</h2>
+          <h2>About Me</h2>
         </div>
         <div class="exp1">
-          <!-- On unix-like operating systems (Linux, MacOS etc), filenames are case-sensitive -->
-          <!-- Make sure the link in the src attribute exactly matches the casing of the filename -->
           <img
             id="me"
             src="./2Professional.jpg"
@@ -43,8 +43,10 @@
           </p>
           <br />
         </div>
+		<div id="projects">
+		</div>
         <div class="marginalign">
-          <h2 id="projects">Projects</h2>
+          <h2>Projects</h2>
         </div>
         <div class="exp1">
           <div>
@@ -75,8 +77,10 @@
           </div>
           <br />
         </div>
+		<div id="certifications">
+		</div>
         <div class="marginalign">
-          <h2 id="certifications">Certifications</h2>
+          <h2>Certifications</h2>
         </div>
         <div class="exp1 excel">
           <h3>
@@ -99,8 +103,10 @@
           <br />
           <br />
         </div>
+		<div id="workexperience">
+		</div>
         <div class="marginalign">
-          <h2 id="workexperience">Work Experience</h2>
+          <h2>Work Experience</h2>
         </div>
         <div class="exp1">
           <div>
@@ -165,6 +171,8 @@
           </div>
           <br />
         </div>
+		<div id="volunteerexperience">
+		</div>
         <div class="marginalign">
           <h2 id="volunteerexperience">Volunteer Experience</h2>
         </div>
@@ -226,7 +234,7 @@
           <div>
             <h3>#GoogleCloudReady Facilitator</h3>
             <h4>Google Cloud</h4>
-            <p>Mar 2021 - May 2021</p>
+			<p>Mar 2021 - May 2021</p>
             <p>
               - Received first-hand training from Google Cloud experts on how to
               build, deploy, and scale applications, websites, and services
@@ -240,30 +248,34 @@
           </div>
           <br />
         </div>
+		<div id="resume">
+		</div>
         <div class="marginalign">
-          <h2 id="resume">Resume</h2>
+          <h2>Resume</h2>
         </div>
         <div class="exp1">
           <br />
-            <!-- We need to use a relative link here because only the files in this folder will be uploaded to a webserver -->
-            <!-- Cannot link to OneDrive or the local filesystem because it will not be available on the server -->
             <a class="center" href="./resume.pdf"><b>Download a copy of my resume</b></a>
           <br />
           <br />
           <br />
           <br />
         </div>
+		<div id="contactme">
+		</div>
         <div class="marginalign">
-          <h2 id="contactme">Contact Me</h2>
+          <h2>Contact Me</h2>
         </div>
         <div class="exp1">
           <ul>
-            <li><b>Phone:</b> (712)223-6302</li>
+            <li>
+			  <b>Phone:</b> 
+			  <a id="mobile" href="tel:712-223-6302">712-223-6302</a>
+			  <span id="desktop">712-223-6302</span>
+			</li>
             <li>
               <b>Email:</b>
-              <a href="mailto:kylesschallau@gmail.com"
-                >kylesschallau@gmail.com</a
-              >
+              <a href="mailto:kylesschallau@gmail.com">kylesschallau@gmail.com</a>
             </li>
           </ul>
           <br />
